# PawBeat

./: Hardware  README.md
ADC and IMU acquisition/: readMe.md
ADC and IMU acquisition/imuDataLogger/: CMakeLists.txt
ADC and IMU acquisition/imuDataLogger/Data_collected/: 0x.txt  3x.txt
Demo/: CMakeLists.txt  README.md  processingDemo.cpp
Hardware/: ReadMe  ReadMe.md
Hardware/Prototype/: ReadMe.md  msop converter.brd
Hardware/V0/: micBOB_v0.brd  piHat_v0.brd
Hardware/V0/Schematic/: Microphone Breakout  piHat_v0.sch
Hardware/V1/mic_bobV1/: mic_bobV1.brd  mic_bobV1.sch
Hardware/V1/piHatV1/: piHat_v1.brd  piHat_v1.sch
IPC/: CMakeLists.txt  README.md  pipeReader.cpp  pipeWriter.cpp
Initial Presentation/: README.md
LSM6DS3_Lib/: LSM6DS3.h
Other/: README.md
Other/Initial Presentation/: PresentationSlides.pptx  README.md
Other/Media/: README.md
Pedometer/: LSM6DS3.cpp  LSM6DS3_test.cpp  README.md  SparkFunLSM6DS3.cpp  SparkFunLSM6DS3.h  acc_test_trans.cpp  pedometer_test.cpp
Pedometer/acc_test/: CMakeLists.txt  README.md
PubNub/: README.md  cmaketest.txt  pubnub.hpp
PubNub/PawPulseSamples/: README.md  subscribe_publish_callback_sample.cpp
PubNub/c-core/: README.md
PubNub/samples/: README.md  subscribe_publish_callback_sample.cpp
Research/: README.md
Software/: CMakeLists.txt  README.md  ads_120_C.txt  pawpulse.cpp  pawpulseWebClient.cpp  pawpulseWebClient.mk
Software/Libraries/: README.md
Software/Libraries/LSM6DS3/: CMakeLists.txt  LSM6DS3.cpp
Software/Libraries/pubnub/: pawpulseREADME.md
Software/Previous Versions and Testing/: README.md
Software/Previous Versions and Testing/ADC and IMU acquisition/: CMakeLists.txt  README.md  threadedAccq.cpp
Software/Previous Versions and Testing/ADC and IMU acquisition/imuDataLogger/: imuAccq.cpp
Software/Previous Versions and Testing/ADC and IMU acquisition/imuDataLogger/Data_collected/: 0Z.txt  0y.txt  1Z.txt  1x.txt  1y.txt  2Z.txt  2x.txt  2y.txt  (+2 more)
Software/Previous Versions and Testing/Heartrate/: mic2i2c.cpp
Software/Previous Versions and Testing/Heartrate/Examples/: CMakeLists.txt  Interrupt.cpp
Software/Previous Versions and Testing/Heartrate/signal_processing/: FIR_filter.py  README.md  ads_data70.txt  coefficient_generator.py  filter.cpp  processing.cpp
Software/Previous Versions and Testing/Pedometer/: pedometer_test.cpp
Software/Previous Versions and Testing/Pedometer/acc_test/: acc_test.cpp
Software/Website/: index.html  liveData.html  style.css
Software/Website/img/: README.md
TODO/: README.md
final/: CMakeLists.txt  README.md  processingUpdate.cpp
heartrate/: ADS1015.cpp  CMakeLists.txt  README.md  error report  mic2i2c  mic2i2c.cpp  mic2i2s
heartrate/Examples/: Interrupt.cpp
heartrate/signal_processing/: FIR_filter.py  README.md  ads_data.txt  ads_data70.txt  coefficient generator.py  coefficient_generator.py  hr_coeff.txt  process.py  processing.cpp
media/: README.md
temp/: BugReport.txt  CMakeLists.txt  README.md  ads_120_A.txt  ads_120_C.txt  pipeReader.cpp  pipeWriter.cpp  processing.cpp  processingFinal.cpp  processingTest.cpp  steps_0.txt  steps_1.txt  steps_3.txt  subscribe_publish_callback_sample  subscribe_publish_callback_sample.cpp
webClient/: README.md
webClient/pubnub/: pawpulseREADME.md
webClient/sendDataClient/: README.md  sendDataClient.cpp  sendDataClient.mk
website/: README.md  index.html  liveData.html  projects.html
